--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
   <link rel="stylesheet" href="./css/hamburguesa.css" />
+  <link rel="stylesheet" href="./css/reloj.css" />
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 
   <aside class="panel">
     <nav class="menu">
-      <a href="#seccion1">Sección 1</a>
+      <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
       <a href="#seccion2">Sección 2</a>
       <a href="#seccion3">Sección 3</a>
       <a href="#seccion4">Sección 4</a>
@@ -34,7 +35,24 @@
 
   <main>
     <section id="seccion1" class="section">
-      <h2>Sección1</h2>
+      <h2>Reloj Digital y Alarma Sonora</h2>
+      <div id="container-clock">
+        <div id="carcasa">
+          <div id="reloj">
+            <div>
+              <p>11/01/22</p>
+              <p>No alarm ⏰</p>
+            </div>
+            <h2 id="hour">Digital Clock</h1>
+          </div>
+        </div>
+      </div>
+      <div>
+        <button id="activar-reloj">Iniciar Reloj</button>
+        <button id="desactivar-reloj">Detener Reloj</button>
+        <button id="activar-alarma">Iniciar Alarma</button>
+        <button id="desactivar-alarma">Detener Alarma</button>
+      </div>
     </section>
     <section id="seccion2" class="section">
       <h2>Sección2</h2>
