Agregué botones a juego Bricks

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     <section id="seccion2" class="section">
       <h2>Bricks Demolition</h2>
       <canvas id="myCanvas" width="310" height="300"></canvas>
-      <button id="button-start">Start Game</button>
+      <div id="panel-bricks">
+        <button id="button-stop">Stop Game</button>
+        <button id="button-start">Start Game</button>
+        <button id="button-speed">More difficult</button>
+      </div>
     </section>
     <section id="seccion3" class="section">
       <h2>Sección3</h2>
