--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/hamburguesa.css" />
   <link rel="stylesheet" href="./css/reloj.css" />
   <link rel="stylesheet" href="./css/bricks.css" />
+  <link rel="stylesheet" href="./css/scroll_btn.css">
 </head>
 
 <body>
@@ -74,7 +75,7 @@
       <h2>Sección5</h2>
     </section>
   </main>
-
+  <button class="scroll-top-btn hidden">☝</button>
   <script src="index.js" type="module"></script>
   <script src="./dom/bricks.js"></script>
 </body>
