--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/reloj.css" />
   <link rel="stylesheet" href="./css/bricks.css" />
   <link rel="stylesheet" href="./css/scroll_btn.css">
+  <link rel="stylesheet" href="./css/drawing_canvas.css">
 </head>
 
 <body>
@@ -27,9 +28,9 @@
 
   <aside class="panel">
     <nav class="menu">
-      <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
+      <a href="#seccion1">Digital Clock and Alarm</a>
       <a href="#seccion2">Bricks Demolition</a>
-      <a href="#seccion3">Sección 3</a>
+      <a href="#seccion3">Drawing on Canvas</a>
       <a href="#seccion4">Sección 4</a>
       <a href="#seccion5">Sección 5</a>
     </nav>
@@ -37,7 +38,7 @@
 
   <main>
     <section id="seccion1" class="section">
-      <h2>Reloj Digital y Alarma Sonora</h2>
+      <h2>Digital Clock and Alarm</h2>
       <div id="container-clock">
         <div id="carcasa">
           <div id="reloj">
@@ -56,18 +57,47 @@
         </div>
       </div>
     </section>
+
+
     <section id="seccion2" class="section">
       <h2>Bricks Demolition</h2>
-      <canvas id="myCanvas" width="310" height="300"></canvas>
+      <canvas id="myCanvas" width="300" height="300"></canvas>
       <div id="panel-bricks">
         <button id="button-stop">Stop Game</button>
         <button id="button-start">Start Game</button>
         <button id="button-speed">More difficult</button>
       </div>
+
+
     </section>
     <section id="seccion3" class="section">
-      <h2>Sección3</h2>
+      <h2>Drawing on Canvas</h2>
+      <canvas width="310" height="300" id="mi-lienzo"></canvas>
+      <br>
+      <label>Selecciona el grosor del pincel </label>
+      <select id="select-width">
+        <option value=1>1px</option>
+        <option value=3>3px</option>
+        <option value=5>5px</option>
+        <option value=7>7px</option>
+        <option value=9>9px</option>
+      </select>
+
+      <select id="select-color">
+        <option value="black">Negro</option>
+        <option value="blue">Azul</option>
+        <option value="red">Rojo</option>
+        <option value="yellow">Amarillo</option>
+        <option value="pink">Rosa</option>
+        <option value="green">Verde</option>
+        <option value="gray">Gris</option>
+        <option value="brown">Café</option>
+        <option value="purple">Morado</option>
+        <option value="white">Blanco</option>
+      </select>
     </section>
+
+
     <section id="seccion4" class="section">
       <h2>Sección4</h2>
     </section>
@@ -75,8 +105,11 @@
       <h2>Sección5</h2>
     </section>
   </main>
+
   <button class="scroll-top-btn hidden">☝</button>
+
   <script src="index.js" type="module"></script>
+  <script src="./dom/drawing_canvas.js"></script>
   <script src="./dom/bricks.js"></script>
 </body>
 
