Modo oscuro agregado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-dark>
 
 <head>
   <meta charset="UTF-8">
@@ -13,9 +13,10 @@
   <link rel="stylesheet" href="./css/bricks.css" />
   <link rel="stylesheet" href="./css/scroll_btn.css">
   <link rel="stylesheet" href="./css/drawing_canvas.css">
+  <link rel="stylesheet" href="./css/dark_btn.css">
 </head>
 
-<body>
+<body data-dark>
   <header class="header">
     <h1>I Love JavaScript</h1>
   </header>
@@ -114,6 +115,7 @@
   </main>
 
   <button class="scroll-top-btn hidden">☝</button>
+  <button class="dark-theme-btn">🌚</button>
 
   <script src="index.js" type="module"></script>
   <script src="./dom/drawing_canvas.js"></script>
